--- a/projet d'integration/enseignant.html
+++ b/projet d'integration/enseignant.html
@@ -83,7 +83,7 @@ h1 {
                 </div>
             </div>
             <div class="report">
-                <h2>Nom de l'étudiant 2</h2>
+                <h2>Nom de l'étudiant ray</h2>
                 <p>Date de soumission : 05/02/2024</p>
                 <a href="#">Télécharger le rapport</a>
                 <div class="decision">
